--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -7,3 +7,23 @@ body {
   background: #f0f0f0;
   color: #333;
 }
+
+nav {
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    background-color: #6171FF;
+    z-index: 200;
+}
+
+.nav__logo {
+    float: left;
+    width: 250px;
+    height: 60px;
+    background-size: 100%;
+    background-position: center;
+}
+
+.googleMap {
+    position: absolute;
+    top:0; right:0; bottom:0; left:0;
+}
