--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -73,6 +73,11 @@ nav {
     margin: 0;
 }
 
+.leaflet-control-attribution.leaflet-control {
+    position: absolute;
+    right:0; bottom: 60px;
+}
+
 .map-post {
     padding: 1em;
 }
@@ -179,7 +184,8 @@ nav {
     user-select: none;
 }
 
-.button:hover {
+.button:hover,
+.button.active {
     color: #fff;
     background-color: #FF6673;
     transition: all .2s ease-out;
@@ -196,6 +202,28 @@ pre {
         max-width: 100%;
     }
 }
+
+
+.footer {
+    position: fixed;
+    right: 0px; bottom: 0px; left: 0px;
+    height: 60px;
+    background-color: #fff;
+}
+
+.filter {
+    padding: 0.5em;
+}
+
+.filter-item.button {
+    display: inline-block;
+    width: auto;
+    margin: 0;
+    margin-right: 0.5em;
+    border-radius: 4px;
+    border: 1px solid transparent;
+}
+
 
 @-webkit-keyframes slideIn {
     0%   { right: -50vw; }
