small fixes here and then

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -115,6 +115,10 @@ nav {
     background-size: cover;
 }
 
+.map-post_body-text img {
+    display: none;
+}
+
 .map-post_author-avatar {
     width: 75px; height: 75px;
     background-size: 100%;
