--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 *, *:before, *:after {
     box-sizing: border-box;
@@ -6,6 +7,7 @@
 body {
   background: #f0f0f0;
   color: #333;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3 { margin: 0; }
@@ -43,7 +45,7 @@ nav {
     width: 100%;
     height: 100%;
     background-size: cover;
-    transform: translateY(-11px);
+    position: relative;
     z-index: 5;
 }
 
@@ -52,8 +54,9 @@ nav {
     border-right: 20px solid transparent;
     border-top: 20px solid #FF6673;
     position: absolute;
-    bottom: 0px;
+    bottom: -13px;
     left: 10px;
+    z-index: 1;
 }
 
 .leaflet-container a.leaflet-popup-close-button {
