--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -1,17 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
 
 *, *:before, *:after {
     box-sizing: border-box;
-}
-
-body, html {
-    margin: 0; padding: 0;
-}
-
-body {
-  background: #f0f0f0;
-  color: #333;
-  font-family: 'Open Sans', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -31,6 +27,16 @@ body {
 ::-webkit-scrollbar-thumb:vertical:active {
   background: rgba(0,0,0,0.61);
   -webkit-border-radius: 100px;
+}
+
+body, html {
+    margin: 0; padding: 0;
+}
+
+body {
+  background: #f0f0f0;
+  color: #333;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3 { margin: 0; }
@@ -258,6 +264,9 @@ pre {
     background-color: #fff;
     position: absolute;
     top: -50px; left: 0;
+    font-size: 2em;
+    padding: 0.3em;
+    line-height: 0.9;    
 
 }
 
